# DocsForAI

./: .gitignore  README.md  README_EN.md  _probe_mkdocs.py  pyproject.toml
src/docsforai/: __init__.py  cli.py  converter.py  detector.py  models.py
src/docsforai/crawlers/: __init__.py  base.py  docsify.py  docusaurus.py  feishu.py  generic.py  gitbook.py  mdbook.py  mintlify.py  mkdocs.py  nextdocs.py  starlight.py  vitepress.py
src/docsforai/exporters/: __init__.py  llm.py  multi_md.py  single_md.py
