[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docsforai"
version = "0.1.0"
description = "Specialized documentation website crawler optimized for AI consumption"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["documentation", "crawler", "ai", "vitepress", "docsify", "markdown"]

dependencies = [
    "httpx[http2]>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "markdownify>=0.13.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
docsforai = "docsforai.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/docsforai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
